# Embedded-Base

./: .clang-format-ignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  alias.conf  aliases.txt  build.py  build_system.py  clang-format  clang_restage.py  ftdi_flash.cfg  launchpad.py  load_alias.py  miniterm.py  ner_setup.py  openocd.cfg  requirements.txt  setup.py  simple_ema.c
.github/workflows/: build-cerberus.yml  build-check.yml  build_calypso.yml  build_cerberus.yml  build_image.yml  format-check.yml
NetX/: README.txt
NetX/inc/: nxd_ptp_client.h  rtc.h  u_nx_debug.h  u_nx_ethernet.h  u_nx_protobuf.h  u_rtc.h
NetX/src/: nxd_ptp_client.c  rtc.c  u_nx_debug.c  u_nx_ethernet.c  u_nx_protobuf.c  u_rtc.c
Testing/: CMakeLists.txt  Makefile  cmock-config.yml
Testing/examples/: example_ner_test.conf
Testing/examples/Inc/: test_example.h
Testing/examples/Src/: test_example.c
Testing/manual_mocks/: stub_functions.h  stub_typedefs.h  stubs.h
Testing/manual_mocks/mock_headers/: stm32f4xx.h  stm32f4xx_hal.h  stm32xx_hal.h
cangen/: CANField.py  CANMsg.py  CSynth.py  Decoding.py  Format.py  Messages.py  NetworkEncoding.py  README.md  Result.py  RustSynth.py  RustSynthFromJSON.py  YAMLParser.py  __init__.py  change_spec.py  jsongen  typedpoc.py
cangen/archive/: CANMsg.py  Format.py  Result.py  RustSynthFromJSON.py  YAMLParser.py  __init__.py
cangen/archive/templates/: imports.c.j2
cangen/can-messages/: bms.json  bms.yaml  bms_debug.json  calypso.json  calypso_cmd.json  calypso_cmd.yaml  charger.json  charger.yaml  config.json  dti.json  dti.yaml  energy_meter.json  experiment.json  imd.json  mpu.json  mpu.yaml  msb.json  msb.yaml  oms.json  wheel.json  wheel.yaml
cangen/code-gen/: codegen
cangen/code-gen/templates/: decoders.c.j2  decoders.h.j2  encoders.c.j2  macros.j2  router.c.j2
cangen/structs/: Result.py
cangen/templates/: decoders.c  decoders.c.j2  encoders.c  encoders.c.j2  imports.c  macros.j2  routers.c  routers.c.j2
cdefmt_port/: CMakeLists.txt  README.md  cdefmt_sections.ld
cdefmt_port/include/config/: cdefmt_config.h
dev/: .clang-format-ignore  Dockerfile  alias.sh
dev/nanopb/: CMakeLists.txt  serverdata.options  serverdata.proto
dev/renode/can/: STMCAN_NER.cs  SocketCANBridgeNER.cs
dev/renode/cpus/: stm32f103_ner.repl  stm32f405_ner.repl  stm32h563zit6_ner.repl
dev/renode/i2c/: STM32F4_I2C_NER.cs
dev/renode/peripherals/: INA226.cs  LSM6DSO_IMU_I2C.cs  LSM6DSO_IMU_NER.cs  PCA9539.cs  SHT30.cs  STM32ADCNER.cs  STM32DMANER.cs  VL6180X.cs
dev/scripts/: alias.sh  curr-serial.sh  emulate.sh  flash.sh  gdb.sh  mock.sh  ody-connect.sh  serial.sh
drivers/: CMakeLists.txt
drivers/ads131m04/: CMakeLists.txt  ads131m04.c  ads131m04.h
drivers/lsm6dso/: CMakeLists.txt
drivers/ltc4015/: CMakeLists.txt  LTC4015.h
drivers/ltc68041/: CMakeLists.txt
drivers/m24c32/: CMakeLists.txt  m24c32.c
drivers/max7314/: CMakeLists.txt
drivers/mcp23008/: CMakeLists.txt
drivers/pca9539/: CMakeLists.txt  pca9539.c
drivers/pi4ioe/: CMakeLists.txt
drivers/sht30/: CMakeLists.txt  sht30.h
drivers/vl6180x/: CMakeLists.txt  vl6180x_cfg.h
general/: .clang-format-ignore  CMakeLists.txt
general/include/: ADS131M04.h  INA226.h  LTC4015.h  ads131m04.h  as3935.h  hdc2021debr.h  honeywellSSC.h  lan8670.h  lis2mdl_reg.h  lsm6dso.h  lsm6dso_reg.h  lsm6dsv_reg.h  ltc68041.h  m24c32.h  max7314.h  mcp23008.h  ner_cmsis_os.h  p3t1755.h  pca9539.h  pi4ioe.h  sht30.h  stm32xx_hal.h  tca9539.h  vl6180x_api.h  vl6180x_cfg.h  vl6180x_def.h  vl6180x_i2c.h  vl6180x_platform.h  vl6180x_types.h
general/src/: ADS131M04.c  INA226.c  LTC4015.c  ads131m04.c  as3935.c  hdc2021debr.c  honeywellSSC.c  lan8670.c  lis2mdl_reg.c  lsm6dso.c  lsm6dso_reg.c  lsm6dsv_reg.c  ltc68041.c  m24c32.c  max7314.c  mcp23008.c  p3t1755.c  pca9539.c  pi4ioe.c  sht30.c  tca9539.c  vl6180x_api.c  vl6180x_i2c.c
middleware/: CMakeLists.txt  simple_ema.c  simple_ema.h
middleware/c_utils/: CMakeLists.txt
middleware/eepromdirectory/: CMakeLists.txt  eepromdirectory.c  eepromdirectory.h
middleware/i2c_utility/: CMakeLists.txt
middleware/include/: bitstream.h  c_utils.h  can_utility.h  debounce.h  eeprom_alloc.h  eeprom_directory.h  eeprom_directory_struct.h  eeprom_status.h  eeprom_storage.h  eepromdirectory.h  heap_ringbuffer.h  high_pass.h  i2c_utility.h  i2cdetect.h  i2cdump.h  m24c32_eeprom_directory.h  pid.h  ringbuffer.h  serial.h  timer.h
middleware/pid/: CMakeLists.txt
middleware/ringbuffer/: CMakeLists.txt  ringbuffer.h
middleware/src/: bitstream.c  c_utils.c  can_utility.c  debounce.c  eeprom_alloc.c  eeprom_directory.c  eeprom_storage.c  eepromdirectory.c  heap_ringbuffer.c  high_pass.c  i2c_utility.c  i2cdetect.c  i2cdump.c  m24c32_eeprom_directory.c  pid.c  ringbuffer.c  serial.c  timer.c
middleware/timer/: CMakeLists.txt  timer.h
ner_environment/: .pre-commit-config.yaml  clang_restage.py  launchpad.py  ner_setup.py  requirements.txt  setup.py
ner_environment/build_system/: __init__.py  build_system.py  cdefmt.py  clang_restage.py  miniterm.py  serial2.py  test_runner.py  wsl.py
os/inc/: cmsis_os_test.h  rtos_utils.h
os/src/: rtos_utils.c
patches/: 03072026_threadx_tx_queue_max_inc.patch  0322026_nx_stm32_query_status.patch
stm32f405/inc/: pi4ioe.h
stm32f405/src/: pi4ioe.c
testing/: Makefile  cmock_config.yml  parse_tests.py
testing/manual_mocks/: mock_funtions.h  mock_typedefs.h  stub_functions.h  stub_typedefs.h
testing/mocks/: Mockcan.c  Mockcan.h  Mockcmsis_os.c  Mockcmsis_os.h  Mockstm32f4xx_hal.c  Mockstm32f4xx_hal.h
threadX/inc/: threadX_utils.h  u_can.h  u_debug.h  u_general.h  u_mutex.h  u_queues.h  u_threads.h  u_tx_can.h  u_tx_debug.h  u_tx_flags.h  u_tx_general.h  u_tx_mutex.h  u_tx_queues.h  u_tx_threads.h  u_tx_timers.h
threadX/src/: threadX_utils.c  u_can.c  u_debug.c  u_mutex.c  u_queues.c  u_threads.c  u_tx_can.c  u_tx_debug.c  u_tx_flags.c  u_tx_mutex.c  u_tx_queues.c  u_tx_threads.c  u_tx_timers.c
threadX/traceX/src/: tracex.c  (+1 more)
traceX/inc/: traceout.h  tracex.h
traceX/src/: tracex.c
(+4 files in other folders)
